# AgentTalk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-service-skeleton-and-core-audio/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-fastapi-http-server-and-tts-queue/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-claude-code-hook-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-system-tray-ux-audio-ducking-and-cues/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-configuration-voice-model-switching-and-slash-commands/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-installation-script-packaging-and-documentation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/quick/1-semi-automatic-speech-mode-with-speak-co/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-tray-icon-model-selection-and-per-model-/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-community-expansion-cross-platform-mul/: 3-PLAN.md  3-SUMMARY.md  3-VERIFICATION.md
.planning/quick/4-add-google-antigravity-ide-integration/: 4-PLAN.md  4-SUMMARY.md  4-VERIFICATION.md
.planning/quick/5-audit-text-filter-py-to-check-if-emotion/: 5-PLAN.md  5-SUMMARY.md
.planning/quick/6-implement-agenttalk-latency-optimization/: 6-PLAN.md  6-SUMMARY.md
.planning/quick/7-fix-agenttalk-sentence-detection-so-it-p/: 7-PLAN.md  7-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agenttalk/: audio_duck.py  cli.py  config_loader.py  installer.py  pipe.py  piper_engine.py  preprocessor.py  service.py  setup.py  tray.py  tts_worker.py
agenttalk/commands/: __init__.py  config.md  mode.md  model.md  speak.md  start.md  stop.md  voice.md
agenttalk/hooks/: post_tool_use_hook.py  session_start_hook.py  stop_hook.py
agenttalk/integrations/: antigravity.py  opencode.py
demo/: README.md  record_demo.py  test_record_demo.py
docs/: cross-platform-audit.md
docs/plans/: 2026-02-28-demo-recording-design.md  2026-02-28-demo-recording.md
integrations/antigravity/: README.md  SKILL.md  session_workflow.md
integrations/openai-cli/: README.md  stream_speak.py
integrations/openclaw/: RESEARCH.md  SKILL.md
integrations/opencode/: README.md  session_start_hook.py  stop_hook.py
integrations/vscode/: .vscodeignore  README.md  RESEARCH.md  agenttalk-vscode-1.0.0.vsix  package-lock.json  package.json
integrations/vscode/src/: extension.ts
tests/: test_hooks.py  test_preprocessor.py  test_setup.py
