[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttalk"
version = "1.0.0"
description = "Real-time TTS for Claude Code output — offline, local, no API keys"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "omern" }]
keywords = ["tts", "claude", "claude-code", "text-to-speech", "kokoro"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "kokoro-onnx==0.5.0",
    "sounddevice>=0.5.5",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psutil>=5.9",
    "pysbd==0.3.4",
    "pystray>=0.19.5",
    "pycaw>=20251023",
    "requests>=2.31",
    "tqdm>=4.66",
    "pywin32>=306; platform_system=='Windows'",
    "winshell>=0.6; platform_system=='Windows'",
]

[project.scripts]
agenttalk = "agenttalk.cli:main"

[project.urls]
Homepage = "https://github.com/omernesh/AgentTalk"
Repository = "https://github.com/omernesh/AgentTalk"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"agenttalk.commands" = ["*.md"]
"agenttalk.hooks" = ["*.py"]
